<package>
  <name>behavior_manager_msg</name>
  <version>0.2.1</version>
  <description>The behavior_manager_msg package</description>
  <author>Pablo Santamaria</author>
  <maintainer email="aerostack.upm@gmail.com">Pablo Santamaria</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
