<?xml version="1.0"?>
<package>
  <name>behavior_manager</name>
  <version>1.0.0</version>
  <description>The behavior_coordinator_process package</description>

  <author>Pablo Santamaria</author>
  <maintainer email="aerostack.upm@gmail.com">Pablo Santamaria</maintainer>

  <license>BSD-3</license>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>behavior_manager_msg</build_depend>
  <build_depend>behaviorlib_msg</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>behavior_manager_msg</run_depend>
  <run_depend>behaviorlib_msg</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
